just removed an echo line